<resources>
    <string name="app_name">App Verifier</string>
    <!-- Buttons -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="custom">Custom</string>
    <string name="select">Select</string>
    <string name="transfer">Transfer</string>
    <string name="ok">OK</string>
    <string name="select_the_transfer_method">Select the transfer method</string>
    <string name="request_items">Request items</string>

    <!-- Request Selection -->
    <string name="mdl_over_18">Older than 18</string>
    <string name="mdl_over_21">Older than 21"</string>
    <string name="mdl_mandatory_fields">Mandatory fields"</string>
    <string name="mdl_us_transportation">mDL for US transportation</string>
    <string name="mdl_custom">Custom"</string>
    <string name="mdl_full">Full mDL"</string>
    <string name="mdl_micov_linkage">Request mDL + micov with linkage</string>
    <string name="mvr_full">Request mVR"</string>
    <string name="micov_full">Request micov"</string>
    <string name="eu_pid_full">Request EU Personal ID"</string>

    <!-- mDL strings -->
    <string name="family_name">Family Name</string>
    <string name="given_name">Given Names</string>
    <string name="birth_date">Date of birth</string>
    <string name="issue_date">Date of issue</string>
    <string name="expiry_date">Date of expiry</string>
    <string name="issuing_country">Issuing country</string>
    <string name="issuing_authority">Issuing authority</string>
    <string name="document_number">Licence number</string>
    <string name="portrait">Portrait of mDL holder</string>
    <string name="driving_privileges">Categories of vehicles</string>
    <string name="un_distinguishing_sign">UN distinguishing sign</string>
    <string name="administrative_number">Administrative number</string>
    <string name="sex">Sex</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="eye_colour">Eye colour</string>
    <string name="hair_colour">Hair colour</string>
    <string name="birth_place">Place of birth</string>
    <string name="resident_address">Permanent place of residence</string>
    <string name="portrait_capture_date">Portrait image timestamp</string>
    <string name="age_in_years">How old are you (in years)?</string>
    <string name="age_birth_year">In what year were you born?</string>
    <string name="age_over_18">Age over 18?</string>
    <string name="age_over_21">Age over 21?</string>
    <string name="issuing_jurisdiction">Issuing jurisdiction</string>
    <string name="nationality">Nationality</string>
    <string name="resident_city">Resident city</string>
    <string name="resident_state">Resident state</string>
    <string name="resident_postal_code">Resident postal code</string>
    <string name="resident_country">Resident country</string>
    <string name="family_name_national_character">Family name in national characters</string>
    <string name="given_name_national_character">Given name in national characters</string>
    <string name="signature_usual_mark">Signature / usual mark</string>

    <!-- mVR strings -->
    <string name="registration_info">Vehicle Registration Information</string>
    <string name="registration_holder">Vehicle Registration Holder Information</string>
    <string name="basic_vehicle_info">Basic Vehicle Information</string>
    <string name="vin">Vehicle Identification Number</string>
    <string name="new_request">New Request</string>
    <string name="close_connection">Close Connection</string>
    <string name="micov_vtr_fn">Family Name</string>
    <string name="micov_vtr_gn">Given Name</string>
    <string name="micov_vtr_dob">Date of Birth</string>
    <string name="micov_vtr_sex">Sex</string>
    <string name="micov_vtr_v_RA01_1">First vaccination against RA01</string>
    <string name="micov_vtr_v_RA01_2">Second vaccination against RA01</string>
    <string name="micov_vtr_pid_PPN">ID with pasport number</string>
    <string name="micov_vtr_pid_DL">ID with driver’s license number</string>
    <string name="micov_att_1D47_vaccinated">Indication of vaccination against Yellow Fever</string>
    <string name="micov_att_RA01_vaccinated">Indication of vaccination against COVID-19</string>
    <string name="micov_att_RA01_test">Indication of test event for COVID-19</string>
    <string name="micov_att_safeEntry_Leisure">Safe entry indication</string>
    <string name="micov_att_fac">Facial Image</string>
    <string name="micov_att_fni">Family Name Initial</string>
    <string name="micov_att_gni">Given Name Initial</string>
    <string name="micov_att_by">Birth Year</string>
    <string name="micov_att_bm">Birth Month</string>
    <string name="micov_att_bd">Birth Day</string>
    <string name="item_settings">Settings</string>
    <string name="show_qr_code_instructions">Scan QR code with mdoc application.\n\nNOTE: This is not supported for ISO 18013-7, only 23220-4.</string>
    <string name="show_qr">Show QR Code for\nReverse Engagement</string>
    <string name="dhs_compliance">DHS Compliance</string>

    <!-- EU PID -->
    <string name="unique_identifier">Unique Identifier</string>
    <string name="birth_family_name">Family Name at Birth</string>
    <string name="birth_family_name_national_characters">Family Name at Birth in national characters</string>
    <string name="first_name_at_birth">First Name at Birth</string>
    <string name="first_name_at_birth_national_characters">First Name at Birth in national characters</string>
    <string name="gender">Gender</string>
    <string name="facial_portrait">FacialImage/Portrait</string>
    <string name="biometric_template_finger">Fingerprint</string>
    <string name="age_over_13">Age over 13?</string>
    <string name="age_over_16">Age over 16?</string>
    <string name="age_over_60">Age over 60?</string>
    <string name="age_over_65">Age over 65?</string>
    <string name="age_over_68">Age pver 68?</string>

    <!-- Side Menu Items -->
    <string name="menu_reader_home">Home</string>
    <string name="menu_reverse_engagement">Reverse Engagement</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>

    <!-- Presentation History -->
    <string name="title_presentation_history">mDL Presentation History</string>
    <string name="btn_log_delete_selected">Delete Selected</string>
    <string name="btn_log_delete_all">Delete All</string>


</resources>