<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/requestOptions"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_reader_home"/>

    <item
        android:id="@+id/reverseEngagement"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_present_document"
        android:title="@string/menu_reverse_engagement" />
    <item
        android:id="@+id/viewTruststore"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_truststore"
        android:title="@string/menu_view_truststore" />
    <item
        android:id="@+id/settings"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>